--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,8 @@
 doctype html
 html 
     head 
-        title Youtube
+        title youtube
+
     body 
-        h1 Home
+        h1 watch page!
         include partials/footer.pug
