--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,7 @@
 extends base.pug
 
 block head
-    title Watch | Youtube
+    title Edit | Youtube
 
 block content 
-    h1 Watch page!
+    h1 edit page!
