--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,7 @@
 doctype html
 html 
     head 
-        block head
+        title #{pageTitle} | Youtube 
     body 
         block content
         include partials/footer.pug
