--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,6 +2,8 @@ doctype html
 html 
     head 
         title #{pageTitle} | Youtube 
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css")        
     body 
-        block content
-        include partials/footer.pug
+        main
+            block content
+    include partials/footer.pug
