--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,4 +1,9 @@
 extends base.pug
 
 block content 
-    h2 It's trending videos.
+    h2 Welcome to trend video! 
+    ul 
+        each video in videos 
+            li=video
+        else 
+            li Sorry, nothing found.
