--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,9 +1,9 @@
 extends base.pug
+include mixins/video
 
 block content 
     h2 Welcome to trend video! 
-    ul 
-        each video in videos 
-            li=video
-        else 
-            li Sorry, nothing found.
+    each video in videos 
+        +video(video)
+    else 
+        li Sorry, nothing found.
