--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,8 +1,9 @@
-mixin video(videoData)
+mixin video(video)
     div
-        h4=videoData.title
+        h4
+            a(href=`videos/${video.id}`)=video.title
         ul
-            li #{videoData.rating}/5
-            li #{videoData.comment} comments.
-            li Posted #{videoData.createdAt}.
-            li #{videoData.views} views.
+            li #{video.rating}/5
+            li #{video.comment} comments.
+            li Posted #{video.createdAt}.
+            li #{video.views} views.
