--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,6 +4,8 @@ html
         title #{pageTitle} | Youtube 
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")        
     body 
+        header
+            h1=pageTitle
         main
             block content
     include partials/footer.pug
