--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,6 +2,6 @@ extends base.pug
 
 block content 
     h4 Change Title of video
-    form(action="/save-changes", method="POST")
+    form(method="POST")
         input(name="title",placeholder="Video Title", value=video.title, required)
         input(value="Save", type="submit")
