--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,4 +3,6 @@ extends base.pug
 block content
     form(method="POST")
         input(placeholder="title", required, type="text", name="title")
+        input(placeholder="description", required, type="text", name="description")
+        input(placeholder="hashtags, separated by comma.", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
