--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,8 @@
 extends base.pug
 
 block content
+    if errorMessage
+        span=errorMessage
     form(method="POST")
         input(placeholder="title", required, type="text", name="title")
         input(placeholder="description", required, type="text", name="description")
