--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -3,5 +3,7 @@ extends base.pug
 block content 
     h4 Change Title of video
     form(method="POST")
-        input(name="title",placeholder="Video Title", value=video.title, required)
+        input(name="title", placeholder="Video Title", required, value=video.title)
+        input(name="description", placeholder="description", required, type="text", value=video.description)
+        input(name="hashtags", placeholder="hashtags, separated by comma.", required, type="text", value=video.hashtags.join())
         input(value="Save", type="submit")
