--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -1,6 +1,9 @@
 extends base.pug
+include mixins/video
 
 block content
     form(method="GET")
         input(type="text" name="keyword" placeholder="Video title")
         input(type="submit" value="Search by title.")
+    each video in videos
+        +video(video)
