--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -8,16 +8,22 @@ html
             h1=pageTitle
             nav
                 ul
-                    li 
-                        a(href="/videos/upload") Upload Video
                     li
                         a(href="/") Home
                     li 
                         a(href="/search") Search
-                    li
-                        a(href="/join") Join
-                    li
-                        a(href="/login") Login
+                    if loggedIn
+                        li
+                            a(href="/join") Join
+                        li
+                            a(href="/login") Login
+                    else
+                        li 
+                            a(href="/logout") Log out
+                        li 
+                            a(href="/my-profile") My profile
+                    li 
+                        a(href="/videos/upload") Upload Video
         main
             block content
     include partials/footer.pug
