--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,6 +7,8 @@ block content
         input(name="username" type="text" required placeholder="username")
         input(name="password" type="password" required placeholder="password")
         input(type="submit" value="Login")
+        br 
+        a(href="https://github.com/login/oauth/authorize?client_id=94cf88c350148b7acec6&allow_signup=false") continue with Github &rarr;
     hr
     div
         span Don't have an account? 
