--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -14,7 +14,7 @@ html
                         a(href="/search") Search
                     if loggedIn
                         li 
-                            a(href="/logout") Log out
+                            a(href="/users/logout") Log out
                         li 
                             a(href="/my-profile") My profile                        
                         li 
