--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,7 +3,9 @@ extends base.pug
 block content
     if errorMessage
         span=errorMessage
-    form(method="POST")
+    form(method="POST" enctype="multipart/form-data")
+        label(for="video") Video file
+        input(name="video", id="video" type="file", required, accept="video/*")
         input(placeholder="title", required, type="text", name="title")
         input(placeholder="description", required, type="text", name="description")
         input(placeholder="hashtags, separated by comma.", required, type="text", name="hashtags")
