--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,6 +2,7 @@ extends base.pug
 
 block content 
     h1=video.title
+    video(src="/" + video.filePath, controls)
     h3 #{video.views} #{video.views === 1 ? "view" : "views"}
     small #{video.hashtags}
     hr
