add entry to module.export in webpack.config.js

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,3 +7,6 @@ block content
         +video(video)
     else 
         li Sorry, nothing found.
+
+block script 
+    script(src="/assets/js/main.js") 
