--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -7,3 +7,6 @@ block content
         input(type="submit" value="Search by title.")
     each video in videos
         +video(video)
+
+block script 
+    script(src="/assets/js/main.js")        
