--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -9,3 +9,6 @@ block content
     a(href=`${video.id}/edit`) Edit Video &rarr;
     br
     a(href=`${video.id}/delete`) Delete Video &rarr;
+
+block script
+    script(src="/assets/js/videoPlayer.js") 
