--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,14 +1,21 @@
 extends base.pug
 
 block content 
-    h1=video.title
+    //-
+        h1=video.title
     video(src="/" + video.filePath, controls)
-    h3 #{video.views} #{video.views === 1 ? "view" : "views"}
-    small #{video.hashtags}
-    hr
-    a(href=`${video.id}/edit`) Edit Video &rarr;
-    br
-    a(href=`${video.id}/delete`) Delete Video &rarr;
+    div 
+        button#play play 
+        button#mute mute 
+        span#time 00:00/00:00
+        input(type="range", step="0.1", min="0", max="1")#volumn
+    //-
+        h3 #{video.views} #{video.views === 1 ? "view" : "views"}
+        small #{video.hashtags}
+        hr
+        a(href=`${video.id}/edit`) Edit Video &rarr;
+        br
+        a(href=`${video.id}/delete`) Delete Video &rarr;
 
 block script
     script(src="/assets/js/videoPlayer.js") 
