--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -8,7 +8,7 @@ block content
         button#play play 
         button#mute mute 
         span#time 00:00/00:00
-        input(type="range", step="0.1", min="0", max="1")#volume
+        input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
     //-
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
         small #{video.hashtags}
