--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -7,7 +7,10 @@ block content
     div 
         button#play play 
         button#mute mute 
-        span#time 00:00/00:00
+        div 
+            span#currentTime 0:00
+            span / 
+            span#totalTime 0:00
         input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
     //-
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
