--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,17 +3,20 @@ extends base.pug
 block content 
     //-
         h1=video.title
-    video(src="/" + video.filePath)
-    div 
-        button#play play 
-        button#mute mute 
-        input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
+    div#videoContainer
+        video(src="/" + video.filePath)
         div 
-            span#currentTime 0:00
-            span / 
-            span#totalTime 0:00
-        div
-            input(type="range", step="1", value=0, min="0")#timeLine
+            button#play play 
+            button#mute mute 
+            input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
+            div 
+                span#currentTime 0:00
+                span / 
+                span#totalTime 0:00
+            div
+                input(type="range", step="1", value=0, min="0")#timeLine
+            div
+                button#fullScreen Enter Full Screen
     //-
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
         small #{video.hashtags}
