--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,7 +5,7 @@ block content
         h1=video.title
     div#videoContainer
         video(src="/" + video.filePath)
-        div 
+        div#videoControllers 
             button#play play 
             button#mute mute 
             input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
