--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -28,4 +28,5 @@ html
         main
             block content
     include partials/footer.pug
+    script(src="/assets/js/main.js") 
     block script
