--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,10 @@
 extends base.pug
 
 block content
+    div 
+        video#preview
+    div
+        button#startBtn Start Recording!
     if errorMessage
         span=errorMessage
     form(method="POST" enctype="multipart/form-data")
@@ -10,3 +14,6 @@ block content
         input(placeholder="description", required, type="text", name="description")
         input(placeholder="hashtags, separated by comma.", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
+
+block script 
+    script(src="/assets/js/recorder.js") 
