--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,7 @@ block content
         input(name="password" type="password" required placeholder="password")
         input(type="submit" value="Login")
         br 
-        a(href="https://github.com/login/oauth/authorize?client_id=94cf88c350148b7acec6&allow_signup=false") continue with Github &rarr;
+        a(href="/users/github/start") continue with Github &rarr;
     hr
     div
         span Don't have an account? 
