--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -4,3 +4,29 @@ body {
   background-color: wheat;
   color: $tomato;
 }
+
+@keyframes goAway {
+  from {
+    transform: 0;
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
+
+.message {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px;
+  border-radius: 100000px;
+  text-align: center;
+  background-color: azure;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 2s;
+}
