--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -17,6 +17,11 @@ block content
                 input(type="range", step="1", value=0, min="0")#timeLine
             div
                 button#fullScreen Enter Full Screen
+        if loggedIn
+            div.video__comments
+                form.video__comment-form#commentForm
+                    textarea(cols="30", rows="10" plaseholder="Write a comment...") 
+                    button Submit comment
     //-
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
         small #{video.hashtags}
@@ -27,3 +32,4 @@ block content
 
 block script
     script(src="/assets/js/videoPlayer.js") 
+    script(src="/assets/js/commentSection.js") 
