Fix element finding error
#16.3 API Route part One

--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -32,4 +32,5 @@ block content
 
 block script
     script(src="/assets/js/videoPlayer.js") 
-    script(src="/assets/js/commentSection.js") 
+    if loggedIn
+        script(src="/assets/js/commentSection.js") 
