--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -5,8 +5,12 @@ block content
     form(method="POST", enctype="multipart/form-data")
         label(for="avatar") Avatar 
         input(type="file", name="avatar", id="avatar", accept="image/*")
-        input(type="text", name="name", placeholder="Name", value=loggedInUser.name)
-        input(type="text", name="email", placeholder="Email", value=loggedInUser.email)
-        input(type="text", name="username", placeholder="Username", value=loggedInUser.username)
-        input(type="text", name="location", placeholder="Location", value=loggedInUser.location)
+        input(type="text", name="name", placeholder="Name", value=name || loggedInUser.name)
+        if errorEmail
+            span=errorEmail
+        input(type="text", name="email", placeholder="Email", value=email || loggedInUser.email)
+        if errorUsername
+            span=errorUsername        
+        input(type="text", name="username", placeholder="Username", value=username || loggedInUser.username)
+        input(type="text", name="location", placeholder="Location", value=location || loggedInUser.location)
         input(type="submit", value="Update profile")
