#8.5 Change Password part Two

--- a/src/views/users/change-password.pug
+++ b/src/views/users/change-password.pug
@@ -1,8 +1,10 @@
 extends ../base
 
 block content
-    form(action="POST")
-        input(placeholder="old Password") 
-        input(placeholder="new Password") 
-        input(placeholder="new Password Conform") 
+    if errorMessage 
+        span=errorMessage
+    form(method="POST")
+        input(name="oldPassword" required placeholder="old Password" type="password") 
+        input(name="newPassword" required placeholder="new Password" type="password") 
+        input(name="newPasswordConform" required placeholder="new Password Conform" type="password") 
         input(type="submit" value="change password")
