--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -10,7 +10,10 @@ html
             +message("info", messages.info)
         header
             h1=pageTitle
-            img(src="/" + loggedInUser.avatarUrl width=100 heigth=100)
+            if (loggedInUser.socialOnly)
+                img(src=loggedInUser.avatarUrl, width=100, heigth=100)
+            else
+                img(src="/" + loggedInUser.avatarUrl, width=100, heigth=100)
             nav
                 ul
                     li
