add user profile view
#8.10 User Profile

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -20,6 +20,8 @@ html
                         a(href="/") Home
                     li 
                         a(href="/search") Search
+                    li 
+                        a(href=`/users/6565858b38cd3462afa8b7b4`) admin profile
                     if loggedIn
                         li 
                             a(href="/users/logout") Log out
