--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,4 +1,9 @@
 extends ../base
+include ../mixins/video
 
 block content 
-    
+    each video in videos 
+        +video(video)
+    else 
+        li nothing else 
+
