--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -18,9 +18,10 @@ block content
             div
                 button#fullScreen Enter Full Screen
         div 
-            small uploaded by #{owner.username}
+            small uploaded by 
+                a(href=`/users/${video.owner._id}`) #{video.owner.username}
             br
-            small=video.owner
+            small=video.owner._id
             br
             small=loggedInUser._id
         if loggedIn
@@ -31,7 +32,7 @@ block content
     
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
         small #{video.hashtags}
-        if video.owner == loggedInUser._id 
+        if video.owner._id == loggedInUser._id 
             hr
             a(href=`${video.id}/edit`) Edit Video &rarr;
             br
