--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -20,10 +20,6 @@ block content
         div 
             small uploaded by 
                 a(href=`/users/${video.owner._id}`) #{video.owner.username}
-            br
-            small=video.owner._id
-            br
-            small=loggedInUser._id
         if loggedIn
             div.video__comments
                 form.video__comment-form#commentForm
@@ -32,7 +28,7 @@ block content
     
         h3 #{video.views} #{video.views === 1 ? "view" : "views"}
         small #{video.hashtags}
-        if video.owner._id == loggedInUser._id 
+        if String(video.owner._id) == loggedInUser._id 
             hr
             a(href=`${video.id}/edit`) Edit Video &rarr;
             br
