--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,7 +4,8 @@ doctype html
 html 
     head 
         title #{pageTitle} | Youtube 
-        link(rel="stylesheet" href="https://unpkg.com/mvp.css")        
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")    
+        link(rel="stylesheet", href="/static/css/styles.css")
     body  
         if (messages.info)
             +message("info", messages.info)
@@ -37,5 +38,4 @@ html
         main
             block content
     include partials/footer.pug
-    script(src="/assets/js/main.js") 
     block script
