default setting for style
#10.0 Introduction

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -4,38 +4,13 @@ doctype html
 html 
     head 
         title #{pageTitle} | Youtube 
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")    
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")    
         link(rel="stylesheet", href="/static/css/styles.css")
     body  
         if (messages.info)
             +message("info", messages.info)
-        header
-            h1=pageTitle
-            if (loggedInUser.socialOnly)
-                img(src=loggedInUser.avatarUrl, width=100, heigth=100)
-            else
-                img(src="/" + loggedInUser.avatarUrl, width=100, heigth=100)
-            nav
-                ul
-                    li
-                        a(href="/") Home
-                    li 
-                        a(href="/search") Search
-                    li 
-                        a(href=`/users/6565858b38cd3462afa8b7b4`) admin profile
-                    if loggedIn
-                        li 
-                            a(href="/users/logout") Log out
-                        li 
-                            a(href="/users/edit-profile") My profile                        
-                        li 
-                            a(href="/videos/upload") Upload Video
-                    else
-                        li
-                            a(href="/join") Join
-                        li
-                            a(href="/login") Login
+        include partials/header.pug
         main
             block content
-    include partials/footer.pug
+        include partials/footer.pug
     block script
