--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,9 +1,27 @@
-@import "./variables";
+// config
+@import "./config/_variables";
+@import "./config/_reset";
+
+// components
+
+@import "./components/footer.scss";
+@import "./components/header.scss";
+
+// screen
+
+// default
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 body {
-  background-color: wheat;
-  color: $tomato;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+//
 
 @keyframes goAway {
   from {
