--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -2,11 +2,14 @@ extends base.pug
 include mixins/video
 
 block content
-    form(method="GET")
+    form(method="GET").search__form
         input(type="text" name="keyword" placeholder="Video title")
         input(type="submit" value="Search by title.")
-    each video in videos
-        +video(video)
+    div.video_grid
+        each video in videos
+            +video(video)
+        else
+            span.empty__message No videos found.
 
 block script 
     script(src="/assets/js/main.js")        
