--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -6,8 +6,13 @@
 
 @import "./components/footer.scss";
 @import "./components/header.scss";
+@import "./components/video.scss";
+@import "./components/shared.scss";
 
 // screen
+
+@import "./screens/home.scss";
+@import "./screens/search.scss";
 
 // default
 
@@ -19,6 +24,12 @@ a {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+main {
+  max-width: 1200px;
+  width: 100%;
+  margin: 50px auto 0 auto;
 }
 
 //
