--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,10 +1,8 @@
 mixin video(video)
-    div
-        h4
-            a(href=`/videos/${video.id}`)=video.title
-        p=video.description
-        small=video.createdAt
-        ul
-            each hashtag in video.hashtags
-                li=hashtag
-        hr
+    a(href=`videos/${video.id}`).video_mixin
+        div.video_mixin__thumb
+        div.video_mixin__data
+            span.video_mixin__title=video.title
+            div.video_mixin__meta
+                span #{video.meta.views} 회 
+                span 🙍🏻 #{video.owner.name} 
