Add controller styles
#11.11 Styles Recap
not include codeChallenge

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "./components/header.scss";
 @import "./components/video.scss";
 @import "./components/shared.scss";
+@import "./components/video-player.scss";
 
 // screen
 
