--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,4 +17,4 @@ block content
             span.empty__message Sorry, nothing found.
 
 block script 
-    script(src="/assets/js/main.js") 
+    script(src="/static/js/main.js") 
