--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -12,4 +12,4 @@ block content
             span.empty__message No videos found.
 
 block script 
-    script(src="/assets/js/main.js")        
+    script(src="/static/js/main.js")        
