--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -16,4 +16,4 @@ block content
         input(type="submit", value="Upload Video")
 
 block script 
-    script(src="/assets/js/recorder.js") 
+    script(src="/static/js/recorder.js") 
