--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -5,36 +5,40 @@ block content
         h1=video.title
     div#videoContainer
         video(src="/" + video.filePath)
-        div#videoControllers 
-            button#play play 
-            button#mute mute 
-            input(type="range", step="0.1", value=0.5, min="0", max="1")#volume
+        div#videoControllers.videoControls
+            div.videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                div.videoControls__time
+                    span#currentTime 00:00
+                    span  / 
+                    span#totalTime 00:00
+            input(type="range",step="1", value="0", min="0")#timeLine.videoControls__timeline
+            div.videoControls__volume
+                input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+                span#mute
+                    i.fas.fa-volume-up            
             div 
-                span#currentTime 0:00
-                span / 
-                span#totalTime 0:00
-            div
-                input(type="range", step="1", value=0, min="0")#timeLine
-            div
-                button#fullScreen Enter Full Screen
-        div 
-            small uploaded by 
-                a(href=`/users/${video.owner._id}`) #{video.owner.username}
-        if loggedIn
-            div.video__comments
-                form.video__comment-form#commentForm
-                    textarea(cols="30", rows="10" plaseholder="Write a comment...") 
-                    button Submit comment
+                span#fullScreen
+                    i.fas.fa-expand
+    div 
+        small uploaded by 
+            a(href=`/users/${video.owner._id}`) #{video.owner.username}
+    if loggedIn
+        div.video__comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10" plaseholder="Write a comment...") 
+                button Submit comment
     
-        h3 #{video.views} #{video.views === 1 ? "view" : "views"}
-        small #{video.hashtags}
-        if String(video.owner._id) == loggedInUser._id 
-            hr
-            a(href=`${video.id}/edit`) Edit Video &rarr;
-            br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
+    h3 #{video.views} #{video.views === 1 ? "view" : "views"}
+    small #{video.hashtags}
+    if String(video.owner._id) == loggedInUser._id 
+        hr
+        a(href=`${video.id}/edit`) Edit Video &rarr;
+        br
+        a(href=`${video.id}/delete`) Delete Video &rarr;
 
 block script
-    script(src="/assets/js/videoPlayer.js") 
+    script(src="/static/js/videoPlayer.js") 
     if loggedIn
-        script(src="/assets/js/commentSection.js") 
+        script(src="/static/js/commentSection.js") 
