add data-attribute to template
#12.1 Register View Event

--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -3,7 +3,7 @@ extends base.pug
 block content 
     //-
         h1=video.title
-    div#videoContainer
+    div#videoContainer(data-id=video._id)
         video(src="/" + video.filePath)
         div#videoControllers.videoControls
             div.videoControls__play
