--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -1,6 +1,6 @@
 .video_mixin {
   .video_mixin__thumb {
-    background-color: tomato;
+    background-color: aliceblue;
     height: 140px;
     width: 100%;
     border-radius: 17px;
