--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -2,10 +2,14 @@ header
     a(href="/").header__logo
         i.fa-brands.fa-youtube 
     h1=pageTitle
-    if (loggedInUser.socialOnly)
-        img(src=loggedInUser.avatarUrl, width=100, heigth=100)
+    
+    if loggedInUser.avatarUrl === ""
+        span 🙍🏻‍♂️
     else
-        img(src="/" + loggedInUser.avatarUrl, width=100, heigth=100)
+        if loggedInUser.socialOnly
+            img(src=loggedInUser.avatarUrl, width=100, heigth=100)
+        else
+            img(src="/" + loggedInUser.avatarUrl, width=100, heigth=100)
     nav
         ul
             li 
