--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -13,6 +13,11 @@ header {
     padding: 5px 10px;
     border-radius: 5px;
   }
+  .header__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
   ul {
     display: flex;
     justify-content: space-between;
