--- a/src/client/scss/screens/search.scss
+++ b/src/client/scss/screens/search.scss
@@ -17,4 +17,13 @@
     text-align: center;
     padding: 10px;
   }
+  button {
+    all: unset;
+    position: absolute;
+    right: 15px;
+    font-size: 18px;
+    background-color: rgba(0, 0, 0, 0);
+    text-align: center;
+    cursor: pointer;
+  }
 }
