--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,17 +1,20 @@
 // config
-@import "./config/_variables";
 @import "./config/_reset";
+@import "./config/_variables";
 
 // components
 
 @import "./components/footer.scss";
+@import "./components/forms.scss";
 @import "./components/header.scss";
-@import "./components/video.scss";
 @import "./components/shared.scss";
+@import "./components/social-login.scss";
 @import "./components/video-player.scss";
+@import "./components/video.scss";
 
 // screen
 
+@import "./screens/edit-profile.scss";
 @import "./screens/home.scss";
 @import "./screens/search.scss";
 
