--- a/src/views/edit-profile.pug
+++ b/src/views/edit-profile.pug
@@ -1,8 +1,7 @@
 extends base
 
 block content 
-    img(src="/" + loggedInUser.avatarUrl, width="100", heigth="100")
-    form(method="POST", enctype="multipart/form-data")
+    form(method="POST", enctype="multipart/form-data").edit-profile__form
         label(for="avatar") Avatar 
         input(type="file", name="avatar", id="avatar", accept="image/*")
         input(type="text", name="name", placeholder="Name", value=name || loggedInUser.name)
@@ -15,5 +14,5 @@ block content
         input(type="text", name="location", placeholder="Location", value=location || loggedInUser.location)
         input(type="submit", value="Update profile")
         if !loggedInUser.socialOnly
-            hr
-            a(href="change-password") Change password &rarr;
+            div.edit-profile__password
+                a(href="change-password") Change password &rarr;
