--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -9,7 +9,8 @@ form {
   }
 }
 
-input {
+input:not(input[type="range"]),
+input[type="submit"] {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
