--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -27,7 +27,7 @@ block content
     if loggedIn
         div.video__comments
             form.video__comment-form#commentForm
-                textarea(cols="30", rows="10" plaseholder="Write a comment...") 
+                textarea#commentArea(cols="30", rows="10" plaseholder="Write a comment...") 
                 button Submit comment
     
     h3 #{video.views} #{video.views === 1 ? "view" : "views"}
